# Kaggle_EEG

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: Kaggle_analysis.ipynb
