[project]
name = "kaggle-eeg"
version = "0.1.0"
description = "Using the Kaggle \"confused student\" EEG data for processing and modelling exercises."
authors = [
    {name = "joheizer",email = "johannes.heizer@godot-austria.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "mne (>=1.9.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "kagglehub (>=0.3.6,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
